# qdoc

./: .flaskenv  .gitignore  README.md  package-lock.json  package.json
api/: crypto_list.txt  pyproject.toml
api/api/: __init__.py  api.py  config.py  get_data.py
api/tests/: __init__.py  crypto_list.txt  test_api.py
api/views/: main.py
backend/: .coverage  app.py  pyproject.toml
backend/app/: __init__.py  config.py  models.py
backend/app/views/: auth.py  index.py
backend/migrations/versions/: 2301c2a3547f_.py  f0bf11ff9a10_.py
backend/src/app/: __init__.py  app.py  config.py  models.py
backend/src/app/migrations/versions/: 5ef65e624c5a_.py  ba6a525ebb4c_.py
backend/src/app/views/: auth.py  index.py
backend/src/qdoc_api/: __init__.py  config.py  models.py
backend/src/qdoc_api/views/: auth.py  index.py
backend/tests/: __init__.py  test_api.py  test_auth.py  test_index.py  test_models.py
frontend/: package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Header.tsx  ImgCard.tsx  RegisterForm.tsx
frontend/src/views/: Login.tsx  Register.tsx  UserTime.tsx  Users.tsx
src/: App.tsx
src/components/: Card.tsx  TRow.tsx
