[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bob Scales <rscales02@yahoo.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
yfinance = "^0.1.70"
pytest-flask = "^1.2.0"
pandas-datareader = "^0.10.0"
pytest-mock = "^3.7.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
