[tool.poetry]
name = "qdoc_api"
version = "0.1.0"
description = ""
authors = ["Bob Scales <rscales02@yahoo.com>"]
packages = [
    { include = "qdoc_api", from = "./src"},
]
[tool.poetry.dependencies]
python = "3.9.9"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
pytest-flask = "^1.2.0"
pytest-mock = "^3.7.0"
Flask-Cors = "^3.0.10"
coverage = "^6.3.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
pandas = "^1.4.1"
Werkzeug = "~2.0.0"
Flask-JWT-Extended = "^4.3.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
